--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,7 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - >
-    conda create -q -n test python=$TRAVIS_PYTHON_VERSION
-    numpy scipy matplotlib pandas scikit-learn
+  - conda env create
   - source activate test
   # - pip install .
   - pip install -r requirements.txt
