--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - conda info -a
 
   - conda env create
-  - source activate test
+  - source activate glia
   # - pip install .
   - pip install -r requirements.txt
   - python setup.py install
