--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-h5py>=2.5.0
-matplotlib>=1.5.0
-numpy>=1.10.2
-pytest>=2.8.3
-tqdm>=4.8.4
-click>=6.6
-pyYAML>=3.11
-elephant==0.3.0
-neo==0.4.1
-requests==2.11.1
-scikit-learn>=0.17.3
-pandas==0.19.2
-beautifulsoup4==4.5.3
-websockets==3.3
-webcolors==1.7
+h5py
+matplotlib
+numpy
+pytest
+tqdm
+click
+pyYAML
+elephant
+neo
+requests
+scikit-learn
+pandas
+beautifulsoup4
+websockets
+webcolors
+pyarrow
