--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,5 @@
 name: glia
 dependencies:
-  - python=3.7
-  - numpy
-  - matplotlib
-  - scipy
-  - pandas
-  - scikit-learn
+  - python=3.8
+  - pip:
+    - -r file:requirements.txt
